Back to top link commit.

--- a/calculators/break-even-investment-calculator.html
+++ b/calculators/break-even-investment-calculator.html
@@ -116,7 +116,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -219,9 +219,20 @@
   </section>
 
   <!-- 🔹 AD SLOT – CONTENT BREAK -->
-  <div class="ads">
-    Ad Space
-  </div>
+
+  <div class="ads">Ad Space</div>
+
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Calculator</a>
+      <a href="mutual-fund-return-calculator.html">📊 Mutual Fund Calculator</a>
+      <a href="real-cagr-calculator.html">📈 CAGR Calculator</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+      <a href="compound-interest-calculator.html">📈 Compound Interest Calculator</a>
+    </div>
+  </section>
 
   <div class="note">
     <strong>Note:</strong> Results are indicative based on assumed constant returns. Actual investment performance may vary.
@@ -236,10 +247,12 @@
       <a href="../about.html">About</a>
     </p>
   </div>
-</footer>
+  </footer>
 
-  
+</div>
 
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="break-even-investment-calculator.js"></script>
