--- a/calculators/buy-vs-rent-calculator.html
+++ b/calculators/buy-vs-rent-calculator.html
@@ -92,7 +92,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -267,6 +267,18 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="emi-calculator.html">💳 EMI Calculator</a>
+      <a href="loan-prepayment-foreclosure-calculator.html">💰 Loan Prepayment Calculator</a>
+      <a href="loan-eligibility-calculator.html">✅ Loan Eligibility Calculator</a>
+      <a href="home-loan-affordability-calculator.html">🏠 Home Affordability Calculator</a>
+      <a href="capital-gains-tax-calculator.html">📊 Capital Gains Tax Calculator</a>
+      <a href="../blog/buy-vs-rent-decision-guide.html">📖 Buy vs Rent Decision Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for comparison purposes. Actual results may vary based on individual circumstances, market conditions, and additional factors like tax benefits, property registration costs, and unforeseen expenses.
   </div>
@@ -280,8 +292,12 @@
       <a href="../about.html">About</a>
     </p>
   </div>
-</footer>
+  </footer>
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="buy-vs-rent-calculator.js"></script>
