--- a/calculators/capital-gains-tax-calculator.html
+++ b/calculators/capital-gains-tax-calculator.html
@@ -108,7 +108,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -229,6 +229,18 @@
     <p>Ad Space</p>
   </div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="income-tax-calculator.html">💰 Income Tax Calculator</a>
+      <a href="mutual-fund-return-calculator.html">📈 Mutual Fund Calculator</a>
+      <a href="sip-calculator.html">💰 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💵 Lumpsum Investment Calculator</a>
+      <a href="gold-investment-calculator.html">🥇 Gold Investment Calculator</a>
+      <a href="../blog/capital-gains-tax-guide-india.html">📖 Capital Gains Tax Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for capital gains tax in India. Actual tax liability may vary based on your holding period, asset type, indexation benefits, exemptions claimed, and applicable tax regime. Consult a tax advisor for personalized tax planning and filing guidance.
   </div>
@@ -242,8 +254,12 @@
       <a href="../about.html">About</a>
     </p>
   </div>
-</footer>
+  </footer>
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="capital-gains-tax-calculator.js"></script>
