--- a/calculators/credit-score-impact-simulator.html
+++ b/calculators/credit-score-impact-simulator.html
@@ -116,7 +116,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -276,6 +276,18 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="credit-card-debt-payoff-calculator.html">💳 Credit Card Debt Payoff</a>
+      <a href="loan-eligibility-calculator.html">📊 Loan Eligibility Calculator</a>
+      <a href="emi-calculator.html">💰 EMI Calculator</a>
+      <a href="net-worth-calculator.html">📊 Net Worth Calculator</a>
+      <a href="monthly-savings-planner.html">💵 Monthly Savings Planner</a>
+      <a href="../blog/get-out-of-credit-card-debt.html">📖 Credit Card Debt Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for credit score impact based on typical scoring models. Actual credit score changes may vary based on your credit bureau (CIBIL, Experian, Equifax), credit history, and other factors. Check your credit report regularly for accurate score monitoring.
   </div>
@@ -291,6 +303,10 @@
   </div>
 </footer>
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="credit-score-impact-simulator.js"></script>
