--- a/calculators/education-loan-calculator.html
+++ b/calculators/education-loan-calculator.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="education-loan-calculator.css">
     <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/education-loan-calculator.html">
 </head>
-<body>
+<body id="top">
     <header class="navbar">
         <div class="nav-container">
             <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
@@ -543,16 +543,17 @@
         }
         </script>
 
-        <div class="related-links">
-            <h3>Related Calculators & Resources</h3>
-            <ul>
-                <li>📊 <a href="emi-calculator.html">EMI Calculator</a> - Calculate any loan EMI</li>
-                <li>💰 <a href="loan-prepayment-foreclosure-calculator.html">Loan Prepayment Calculator</a> - See impact of prepayments</li>
-                <li>🏠 <a href="loan-eligibility-calculator.html">Loan Eligibility Calculator</a> - Check how much loan you qualify for</li>
-                <li>📈 <a href="compound-interest-calculator.html">Compound Interest Calculator</a> - Understand interest growth</li>
-                <li>📝 <a href="../blog/how-to-calculate-emi.html">How to Calculate EMI</a> - Complete guide</li>
-            </ul>
-        </div>
+        <section class="content-section">
+            <h2>Related Calculators & Resources</h2>
+            <div class="related-links">
+                <a href="emi-calculator.html">📊 EMI Calculator</a>
+                <a href="loan-prepayment-foreclosure-calculator.html">💰 Loan Prepayment Calculator</a>
+                <a href="loan-eligibility-calculator.html">🏠 Loan Eligibility Calculator</a>
+                <a href="compound-interest-calculator.html">📈 Compound Interest Calculator</a>
+                <a href="car-loan-vs-lease-calculator.html">🚗 Car Loan vs Lease Calculator</a>
+                <a href="../blog/how-to-calculate-emi.html">📖 How to Calculate EMI Guide</a>
+            </div>
+        </section>
 
         <div class="ads">Ad Space</div>
 
@@ -573,7 +574,9 @@
 
     </div>
 
-    
+    <div class="back-to-top">
+        <a href="#top" title="Back to Top">↑</a>
+    </div>
 
     <script src="education-loan-calculator.js"></script>
 </body>
