--- a/calculators/emi-vs-sip-comparison-tool.html
+++ b/calculators/emi-vs-sip-comparison-tool.html
@@ -101,7 +101,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -165,7 +165,7 @@
 
   <div class="form-actions">
     <button onclick="compareEMIvSIP()">Compare</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -223,6 +223,18 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="emi-calculator.html">💳 EMI Calculator</a>
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Calculator</a>
+      <a href="compound-interest-calculator.html">📊 Compound Interest Calculator</a>
+      <a href="loan-prepayment-foreclosure-calculator.html">💵 Loan Prepayment Calculator</a>
+      <a href="../blog/sip-vs-lumpsum-investment.html">📖 SIP vs Lumpsum Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This comparison is for educational purposes. Actual investment returns may vary. Consult a financial advisor for personalized advice.
   </div>
@@ -238,7 +250,10 @@
   </div>
   </footer>
 
+</div>
 
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="emi-vs-sip-comparison-tool.js"></script>
