--- a/calculators/fd-calculator.html
+++ b/calculators/fd-calculator.html
@@ -117,7 +117,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -180,7 +180,7 @@
 
   <div class="form-actions">
     <button onclick="calculateFD()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -250,6 +250,20 @@
     </div>
   </section>
 
+  <div class="ads">Ad Space</div>
+
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="rd-calculator.html">📊 RD Calculator</a>
+      <a href="ppf-maturity-calculator.html">💰 PPF Calculator</a>
+      <a href="compound-interest-calculator.html">📈 Compound Interest Calculator</a>
+      <a href="simple-vs-compound-interest-calculator.html">⚖️ Simple vs Compound Interest</a>
+      <a href="capital-gains-tax-calculator.html">💹 Capital Gains Tax Calculator</a>
+      <a href="../blog/fd-vs-debt-mutual-funds.html">📖 FD vs Debt Funds Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates based on compound interest formulas. Actual FD rates and terms may vary by bank.
   </div>
@@ -266,6 +280,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="fd-calculator.js"></script>
