--- a/calculators/fire-calculator.html
+++ b/calculators/fire-calculator.html
@@ -116,7 +116,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -262,6 +262,18 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="retirement-planning-calculator.html">🏛️ Retirement Planning Calculator</a>
+      <a href="monthly-savings-planner.html">💵 Monthly Savings Planner</a>
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+      <a href="net-worth-calculator.html">📊 Net Worth Calculator</a>
+      <a href="inflation-impact-calculator.html">📉 Inflation Impact Calculator</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for FIRE (Financial Independence Retire Early) planning. Actual retirement corpus needed may vary based on inflation rates, investment returns, lifestyle changes, and unforeseen expenses. Consult a financial planner for personalized retirement planning.
   </div>
@@ -278,6 +290,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="fire-calculator.js"></script>
