--- a/calculators/in-hand-salary-calculator.html
+++ b/calculators/in-hand-salary-calculator.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="in-hand-salary-calculator.css">
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -256,9 +256,9 @@
     </ul>
 
     <p><strong>Example:</strong> If your CTC is ₹6,00,000 per year, your monthly in-hand salary might be around ₹35,000-40,000 after all deductions, which is about 70% of your average monthly CTC (₹50,000).</p>
-
-    <p><strong>Related Calculators:</strong> Use our <a href="hra-calculator.html">HRA Calculator</a> to maximize tax exemptions and <a href="income-tax-calculator.html">Income Tax Calculator</a> to compare old vs new tax regime.</p>
   </div>
+
+  <div class="ads">Ad Space</div>
 
   <div class="content-section">
     <h2>Salary Components Breakdown</h2>
@@ -859,6 +859,22 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="hra-calculator.html">🏠 HRA Calculator</a>
+      <a href="income-tax-calculator.html">📊 Income Tax Calculator</a>
+      <a href="gratuity-calculator.html">💰 Gratuity Calculator</a>
+      <a href="epf-calculator.html">🏛️ EPF Calculator</a>
+      <a href="nps-calculator.html">💼 NPS Calculator</a>
+      <a href="retirement-planning-calculator.html">🏛️ Retirement Planning</a>
+    </div>
+  </section>
+
+  <div class="ads">
+    <p>Ad Space</p>
+  </div>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for in-hand salary calculation from CTC. Actual take-home salary may vary based on your company's salary structure, tax regime chosen, exemptions claimed, state professional tax rates, and reimbursements. For evaluating job offers or salary hikes, use our <a href="salary-hike-percentage-calculator.html">Salary Hike Calculator</a>. Consult your HR department or a tax advisor for precise salary breakdown.
   </div>
@@ -875,6 +891,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="in-hand-salary-calculator.js"></script>
