--- a/calculators/inflation-impact-calculator.html
+++ b/calculators/inflation-impact-calculator.html
@@ -124,7 +124,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -228,6 +228,22 @@
     Ad Space
   </div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="compound-interest-calculator.html">📈 Compound Interest Calculator</a>
+      <a href="sip-calculator.html">📊 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Calculator</a>
+      <a href="retirement-planning-calculator.html">🏛️ Retirement Planning</a>
+      <a href="fire-calculator.html">🔥 FIRE Calculator</a>
+      <a href="purchasing-power-calculator.html">💵 Purchasing Power Calculator</a>
+    </div>
+  </section>
+
+  <div class="ads">
+    <p>Ad Space</p>
+  </div>
+
   <div class="note">
     <strong>Note:</strong> Results are indicative. Actual inflation rates may vary based on economic conditions.
   </div>
@@ -244,6 +260,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="inflation-impact-calculator.js"></script>
