--- a/calculators/loan-eligibility-calculator.html
+++ b/calculators/loan-eligibility-calculator.html
@@ -116,7 +116,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -289,6 +289,22 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="emi-calculator.html">💰 EMI Calculator</a>
+      <a href="loan-prepayment-foreclosure-calculator.html">🔄 Loan Prepayment Calculator</a>
+      <a href="credit-score-impact-simulator.html">📊 Credit Score Simulator</a>
+      <a href="in-hand-salary-calculator.html">💵 In-Hand Salary Calculator</a>
+      <a href="buy-vs-rent-calculator.html">🏠 Buy vs Rent Calculator</a>
+      <a href="car-loan-vs-lease-calculator.html">🚗 Car Loan vs Lease</a>
+    </div>
+  </section>
+
+  <div class="ads">
+    <p>Ad Space</p>
+  </div>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for loan eligibility based on income and obligations. Actual loan amount sanctioned may vary based on your credit score, bank policies, property valuation, and documentation. Consult your bank or financial institution for accurate eligibility assessment.
   </div>
@@ -305,6 +321,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="loan-eligibility-calculator.js"></script>
