--- a/calculators/loan-prepayment-foreclosure-calculator.html
+++ b/calculators/loan-prepayment-foreclosure-calculator.html
@@ -116,7 +116,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -174,7 +174,7 @@
 
   <div class="form-actions">
     <button onclick="calculatePrepayment()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -245,6 +245,24 @@
     </div>
   </section>
 
+  <div class="ads">Ad Space</div>
+
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="emi-calculator.html">💳 EMI Calculator</a>
+      <a href="loan-eligibility-calculator.html">✅ Loan Eligibility Calculator</a>
+      <a href="buy-vs-rent-calculator.html">🏠 Buy vs Rent Calculator</a>
+      <a href="home-loan-affordability-calculator.html">🏡 Home Affordability Calculator</a>
+      <a href="car-loan-vs-lease-calculator.html">🚗 Car Loan vs Lease</a>
+      <a href="../blog/reduce-emi-without-prepayment.html">📖 EMI Reduction Guide</a>
+    </div>
+  </section>
+
+  <div class="ads">
+    <p>Ad Space</p>
+  </div>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates based on standard loan formulas. Actual savings may vary based on lender terms and fees.
   </div>
@@ -261,6 +279,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="loan-prepayment-foreclosure-calculator.js"></script>
