--- a/calculators/lumpsum-investment-calculator.html
+++ b/calculators/lumpsum-investment-calculator.html
@@ -109,6 +109,8 @@
   </div>
 </header>
 
+<body id="top">
+
 <div class="container">
 
   <!-- Breadcrumb -->
@@ -141,7 +143,7 @@
 
   <div class="form-actions">
     <button onclick="calculateLumpsum()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -196,6 +198,20 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="compound-interest-calculator.html">💰 Compound Interest Calculator</a>
+      <a href="sip-vs-lumpsum-calculator.html">⚖️ SIP vs Lumpsum</a>
+      <a href="mutual-fund-returns-calculator.html">📊 Mutual Fund Returns</a>
+      <a href="inflation-impact-calculator.html">📉 Inflation Impact</a>
+      <a href="../blog/sip-vs-lumpsum-investment.html">📖 SIP vs Lumpsum Guide</a>
+    </div>
+  </section>
+
+  <div class="ads"><p>Ad Space</p></div>
+
   <div class="note">
     <strong>Note:</strong> Investment projections are estimates based on assumed rates. Actual returns may vary. Consult a financial advisor for personalized advice.
   </div>
@@ -212,6 +228,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="lumpsum-investment-calculator.js"></script>
