--- a/calculators/medical-insurance-80d-calculator.html
+++ b/calculators/medical-insurance-80d-calculator.html
@@ -117,7 +117,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -185,7 +185,7 @@
 
   <div class="form-actions">
     <button onclick="calculate80D()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="errorMessage" class="error-msg"></div>
@@ -426,6 +426,18 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="income-tax-calculator.html">📊 Income Tax Calculator</a>
+      <a href="hra-calculator.html">🏠 HRA Calculator</a>
+      <a href="ppf-maturity-calculator.html">💰 PPF Calculator</a>
+      <a href="nps-calculator.html">💼 NPS Calculator</a>
+      <a href="in-hand-salary-calculator.html">💵 In-Hand Salary Calculator</a>
+      <a href="../blog/section-80c-tax-saving-investments.html">📖 Section 80C Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for Section 80D deduction. Actual deduction depends on your tax regime, premium paid, age category, and compliance with payment mode requirements. Consult a tax advisor for personalized advice.
   </div>
@@ -442,6 +454,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="medical-insurance-80d-calculator.js"></script>
