--- a/calculators/mutual-fund-return-calculator.html
+++ b/calculators/mutual-fund-return-calculator.html
@@ -116,7 +116,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -258,6 +258,18 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Investment Calculator</a>
+      <a href="step-up-sip-calculator.html">📈 Step-Up SIP Calculator</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+      <a href="capital-gains-tax-calculator.html">💹 Capital Gains Tax Calculator</a>
+      <a href="real-cagr-calculator.html">📊 CAGR Calculator</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for mutual fund returns based on assumed growth rate. Actual returns may vary based on fund performance, market conditions, expense ratio, exit loads, and taxes. Mutual funds are subject to market risks. Please read the scheme information document before investing.
   </div>
@@ -274,6 +286,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="mutual-fund-return-calculator.js"></script>
