--- a/calculators/net-worth-calculator.html
+++ b/calculators/net-worth-calculator.html
@@ -85,7 +85,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -162,7 +162,7 @@
 
   <div class="form-actions">
     <button onclick="calculateNetWorth()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -209,6 +209,20 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="monthly-savings-planner.html">💰 Monthly Savings Planner</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+      <a href="fire-calculator.html">🔥 FIRE Calculator</a>
+      <a href="retirement-planning-calculator.html">🏛️ Retirement Planning</a>
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="inflation-impact-calculator.html">📉 Inflation Impact</a>
+    </div>
+  </section>
+
+  <div class="ads"><p>Ad Space</p></div>
+
   <div class="note">
     <strong>Note:</strong> Net worth calculations are for informational purposes. Consult a financial advisor for personalized advice.
   </div>
@@ -225,6 +239,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="net-worth-calculator.js"></script>
