--- a/calculators/ppf-maturity-calculator.html
+++ b/calculators/ppf-maturity-calculator.html
@@ -117,7 +117,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -163,7 +163,7 @@
 
   <div class="form-actions">
     <button onclick="calculatePPF()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -233,6 +233,20 @@
     </div>
   </section>
 
+  <div class="ads">Ad Space</div>
+
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="epf-calculator.html">🏛️ EPF Calculator</a>
+      <a href="nps-calculator.html">💼 NPS Calculator</a>
+      <a href="fd-calculator.html">📊 FD Calculator</a>
+      <a href="rd-calculator.html">💵 RD Calculator</a>
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="../blog/section-80c-tax-saving-investments.html">📖 Section 80C Tax Saving Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates based on PPF formulas. Actual rates and terms may vary as per government notifications.
   </div>
@@ -249,6 +263,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="ppf-maturity-calculator.js"></script>
