--- a/calculators/real-cagr-calculator.html
+++ b/calculators/real-cagr-calculator.html
@@ -85,7 +85,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -137,7 +137,7 @@
 
   <div class="form-actions">
     <button onclick="calculateCAGR()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -184,6 +184,20 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="mutual-fund-returns-calculator.html">📊 Mutual Fund Returns</a>
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Investment</a>
+      <a href="compound-interest-calculator.html">💹 Compound Interest</a>
+      <a href="inflation-impact-calculator.html">📉 Inflation Impact</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+    </div>
+  </section>
+
+  <div class="ads"><p>Ad Space</p></div>
+
   <div class="note">
     <strong>Note:</strong> CAGR calculations are for informational purposes only and do not guarantee future performance. Past performance is not indicative of future results.
   </div>
@@ -200,6 +214,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="real-cagr-calculator.js"></script>
