--- a/calculators/retirement-planning-calculator.html
+++ b/calculators/retirement-planning-calculator.html
@@ -116,7 +116,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -275,6 +275,18 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="fire-calculator.html">🔥 FIRE Calculator</a>
+      <a href="epf-calculator.html">🏛️ EPF Calculator</a>
+      <a href="nps-calculator.html">💼 NPS Calculator</a>
+      <a href="monthly-savings-planner.html">💵 Monthly Savings Planner</a>
+      <a href="inflation-impact-calculator.html">📉 Inflation Impact Calculator</a>
+      <a href="../blog/build-1-crore-retirement-corpus.html">📖 Build 1 Crore Corpus Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for retirement corpus planning. Actual retirement needs may vary based on inflation rates, life expectancy, medical expenses, lifestyle changes, and investment returns. Consult a financial planner for personalized retirement strategy. Use our <a href="fire-calculator.html">FIRE Calculator</a> for early retirement planning.
   </div>
@@ -291,6 +303,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="retirement-planning-calculator.js"></script>
