--- a/calculators/salary-hike-percentage-calculator.html
+++ b/calculators/salary-hike-percentage-calculator.html
@@ -133,7 +133,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -218,8 +218,6 @@
       <li><strong>Negotiation Tool:</strong> Industry benchmarks help negotiate better during appraisals</li>
       <li><strong>Financial Planning:</strong> Knowing your hike helps plan investments, EMIs, and expenses</li>
     </ul>
-
-    <p><strong>Related Calculators:</strong> Use our <a href="in-hand-salary-calculator.html">In-Hand Salary Calculator</a> to understand CTC vs take-home salary and <a href="income-tax-calculator.html">Income Tax Calculator</a> to see tax impact of your hike.</p>
   </div>
 
   <div class="content-section">
@@ -677,6 +675,20 @@
   <!-- HIGH-RPM AD SLOT -->
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="in-hand-salary-calculator.html">💵 In-Hand Salary Calculator</a>
+      <a href="income-tax-calculator.html">📊 Income Tax Calculator</a>
+      <a href="hra-calculator.html">🏠 HRA Calculator</a>
+      <a href="gratuity-calculator.html">💰 Gratuity Calculator</a>
+      <a href="epf-calculator.html">💼 EPF Calculator</a>
+      <a href="nps-calculator.html">📈 NPS Calculator</a>
+    </div>
+  </section>
+
+  <div class="ads"><p>Ad Space</p></div>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for salary hike percentage and comparison. Actual salary components, tax implications, and in-hand salary may vary based on your CTC structure, tax regime, deductions, and company policies. For accurate CTC to in-hand salary calculation, use our <a href="in-hand-salary-calculator.html">In-Hand Salary Calculator</a>. Consult a financial advisor for personalized career and compensation planning.
   </div>
@@ -693,6 +705,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="salary-hike-percentage-calculator.js"></script>
