--- a/calculators/simple-vs-compound-interest-calculator.html
+++ b/calculators/simple-vs-compound-interest-calculator.html
@@ -101,7 +101,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -218,6 +218,18 @@
     <p>Ad Space</p>
   </div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="compound-interest-calculator.html">📈 Compound Interest Calculator</a>
+      <a href="fd-calculator.html">📊 FD Calculator</a>
+      <a href="rd-calculator.html">💵 RD Calculator</a>
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Calculator</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates comparing simple and compound interest. Actual returns may vary based on compounding frequency, interest rate changes, taxes, and fees. Use our <a href="compound-interest-calculator.html">Compound Interest Calculator</a> and <a href="fd-calculator.html">FD Calculator</a> for detailed investment calculations.
   </div>
@@ -234,6 +246,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="simple-vs-compound-interest-calculator.js"></script>
