--- a/calculators/sip-calculator.html
+++ b/calculators/sip-calculator.html
@@ -82,7 +82,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <header class="navbar">
   <div class="nav-container">
@@ -260,6 +260,18 @@
 
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="step-up-sip-calculator.html">📈 Step-Up SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Investment Calculator</a>
+      <a href="mutual-fund-return-calculator.html">📊 Mutual Fund Calculator</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+      <a href="emi-vs-sip-comparison-tool.html">⚖️ EMI vs SIP Comparison</a>
+      <a href="../blog/sip-vs-lumpsum-investment.html">📖 SIP vs Lumpsum Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates based on assumed constant returns. Actual mutual fund returns vary and depend on market conditions. Past performance doesn't guarantee future returns. Consult a financial advisor before making investment decisions.
   </div>
@@ -276,6 +288,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 
