--- a/calculators/step-up-sip-calculator.html
+++ b/calculators/step-up-sip-calculator.html
@@ -85,7 +85,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -143,7 +143,7 @@
 
   <div class="form-actions">
     <button onclick="calculateStepUpSIP()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -192,6 +192,20 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Investment</a>
+      <a href="sip-vs-lumpsum-calculator.html">⚖️ SIP vs Lumpsum</a>
+      <a href="mutual-fund-returns-calculator.html">📊 Mutual Fund Returns</a>
+      <a href="compound-interest-calculator.html">💹 Compound Interest</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+    </div>
+  </section>
+
+  <div class="ads"><p>Ad Space</p></div>
+
   <div class="note">
     <strong>Note:</strong> Returns are indicative and subject to market risks. Mutual funds are subject to market risks. Please read all scheme-related documents carefully.
   </div>
@@ -208,6 +222,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="step-up-sip-calculator.js"></script>
