--- a/calculators/wealth-goal-calculator.html
+++ b/calculators/wealth-goal-calculator.html
@@ -101,7 +101,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -216,6 +216,18 @@
     <p>Ad Space</p>
   </div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="lumpsum-investment-calculator.html">💰 Lumpsum Calculator</a>
+      <a href="monthly-savings-planner.html">💵 Monthly Savings Planner</a>
+      <a href="retirement-planning-calculator.html">🏛️ Retirement Planning</a>
+      <a href="fire-calculator.html">🔥 FIRE Calculator</a>
+      <a href="inflation-impact-calculator.html">📉 Inflation Impact</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for achieving wealth goals. Actual time and investment needed may vary based on market returns, inflation, life events, and risk tolerance. Diversify your investments and consult a financial planner for personalized wealth building strategy. Use our <a href="sip-calculator.html">SIP Calculator</a> and <a href="lumpsum-investment-calculator.html">Lumpsum Calculator</a> for detailed planning.
   </div>
@@ -232,6 +244,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="wealth-goal-calculator.js"></script>
