--- a/calculators/credit-card-debt-payoff-calculator.html
+++ b/calculators/credit-card-debt-payoff-calculator.html
@@ -85,7 +85,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -143,7 +143,7 @@
 
   <div class="form-actions">
     <button onclick="calculatePayoff()">Calculate</button>
-    <button class="secondary-btn" onclick="downloadPDF()">Download as PDF</button>
+    <button class="secondary-btn" onclick="downloadPDF()">Download PDF</button>
   </div>
 
   <div id="result" class="result"></div>
@@ -193,11 +193,23 @@
   <!-- CONTENT-BREAK AD -->
   <div class="ads">Ad Space</div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="emi-calculator.html">💳 EMI Calculator</a>
+      <a href="loan-prepayment-foreclosure-calculator.html">💰 Loan Prepayment Calculator</a>
+      <a href="credit-score-impact-simulator.html">📊 Credit Score Simulator</a>
+      <a href="compound-interest-calculator.html">📈 Compound Interest Calculator</a>
+      <a href="monthly-savings-planner.html">💵 Monthly Savings Planner</a>
+      <a href="../blog/get-out-of-credit-card-debt.html">📖 Get Out of Credit Card Debt Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> Calculations are estimates. Consult your credit card terms for exact details.
   </div>
 
-  <<footer>
+  <footer>
   <div class="container">
     <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
     <p>
@@ -208,6 +220,10 @@
   </div>
 </footer>
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="credit-card-debt-payoff-calculator.js"></script>
