--- a/calculators/income-tax-calculator.html
+++ b/calculators/income-tax-calculator.html
@@ -108,7 +108,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -230,6 +230,18 @@
     <p>Ad Space</p>
   </div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="hra-calculator.html">🏠 HRA Calculator</a>
+      <a href="medical-insurance-80d-calculator.html">🏥 Section 80D Calculator</a>
+      <a href="capital-gains-tax-calculator.html">💹 Capital Gains Tax Calculator</a>
+      <a href="in-hand-salary-calculator.html">💵 In-Hand Salary Calculator</a>
+      <a href="ppf-maturity-calculator.html">💰 PPF Calculator</a>
+      <a href="../blog/section-80c-tax-saving-investments.html">📖 Section 80C Tax Saving Guide</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for income tax calculation comparing old and new tax regimes. Actual tax liability may vary based on your deductions, exemptions, rebates, surcharges, and cess. Consult a tax advisor for accurate tax planning and regime selection. Use our <a href="hra-calculator.html">HRA Calculator</a> and <a href="medical-insurance-80d-calculator.html">Section 80D Calculator</a> for detailed deduction calculations.
   </div>
@@ -246,6 +258,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="income-tax-calculator.js"></script>
