--- a/calculators/monthly-savings-planner.html
+++ b/calculators/monthly-savings-planner.html
@@ -107,7 +107,7 @@
   </script>
 </head>
 
-<body>
+<body id="top">
 
 <!-- NAVBAR -->
 <header class="navbar">
@@ -222,6 +222,18 @@
     <p>Ad Space</p>
   </div>
 
+  <section class="content-section">
+    <h2>Related Calculators & Resources</h2>
+    <div class="related-links">
+      <a href="net-worth-calculator.html">📊 Net Worth Calculator</a>
+      <a href="wealth-goal-calculator.html">🎯 Wealth Goal Calculator</a>
+      <a href="sip-calculator.html">📈 SIP Calculator</a>
+      <a href="rd-calculator.html">💵 RD Calculator</a>
+      <a href="retirement-planning-calculator.html">🏛️ Retirement Planning</a>
+      <a href="fire-calculator.html">🔥 FIRE Calculator</a>
+    </div>
+  </section>
+
   <div class="note">
     <strong>Note:</strong> This calculator provides estimates for monthly savings planning. Actual savings potential may vary based on your income fluctuations, expense patterns, emergency fund needs, and financial goals. Adjust your budget regularly and consult a financial planner for personalized savings strategy.
   </div>
@@ -238,6 +250,10 @@
   </footer>
 
 
+</div>
+
+<div class="back-to-top">
+  <a href="#top" title="Back to Top">↑</a>
 </div>
 
 <script src="monthly-savings-planner.js"></script>
